--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="description"
-        content="SAM-DA: Decoder Adapter for Efficient Medical Domain Adaptation">
+  <meta name="description" content="SAM-DA: Decoder Adapter for Efficient Medical Domain Adaptation">
   <meta name="keywords" content="SAM-DA">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SAM-DA: Decoder Adapter for Efficient Medical Domain Adaptation</title>
@@ -46,48 +45,6 @@
   </script>
 </head>
 <body>
-<!--
-<nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
-  <div class="navbar-menu">
-    <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="https://keunhong.com">
-      <span class="icon">
-          <i class="fas fa-home"></i>
-      </span>
-      </a>
-
-      <div class="navbar-item has-dropdown is-hoverable">
-        <a class="navbar-link">
-          More Research
-        </a>
-        <div class="navbar-dropdown">
-          <a class="navbar-item" href="https://hypernerf.github.io">
-            HyperNeRF
-          </a>
-          <a class="navbar-item" href="https://nerfies.github.io">
-            Nerfies
-          </a>
-          <a class="navbar-item" href="https://latentfusion.github.io">
-            LatentFusion
-          </a>
-          <a class="navbar-item" href="https://photoshape.github.io">
-            PhotoShape
-          </a>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</nav>-->
-
-
 <section class="hero">
   <div class="hero-body">
     <div class="container is-max-desktop">
@@ -111,7 +68,7 @@
               Sebastian Wolf<sup>2</sup>,
             </span>
             <span class="author-block">
-              Raphael Sznitman<sup>1</sup>,
+              Raphael Sznitman<sup>1</sup>
             </span>
           </div>
 
