--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </span>
               <!-- Video Link. -->
               <span class="link-block">
-                <a href="https://www.youtube.com/watch?v=PixUJ9Xl5_8&ab_channel=JavierGamazoTejero"
+                <a href="https://www.youtube.com/watch?v=RIdJbANtMAs&ab_channel=JavierGamazoTejero"
                    class="external-link button is-normal is-rounded is-dark" target="_blank">
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
